[gd_scene load_steps=5 format=2]

[ext_resource path="res://Members.gd" type="Script" id=1]
[ext_resource path="res://EventForm.tscn" type="PackedScene" id=2]
[ext_resource path="res://Bank.tscn" type="PackedScene" id=3]
[ext_resource path="res://PendingReports.tscn" type="PackedScene" id=4]

[node name="Members" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="This" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.49835
margin_bottom = -1.49835
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title_Financials" type="Label" parent="This"]
margin_left = 4.75928
margin_top = 193.041
margin_right = 599.759
margin_bottom = 340.041
text = "Financials"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View_Bank" type="Button" parent="This/Title_Financials"]
margin_top = 22.0
margin_right = 590.0
margin_bottom = 56.0
text = "View Organization Bank"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View_Bank2" type="Button" parent="This/Title_Financials"]
anchor_top = -0.0101924
anchor_bottom = -0.0101924
margin_left = 1.0
margin_top = 59.4983
margin_right = 588.0
margin_bottom = 93.4983
text = "View Personal Financials"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View_Bank3" type="Button" parent="This/Title_Financials"]
anchor_top = -0.0101924
anchor_bottom = -0.0101924
margin_left = -3.0
margin_top = 95.4983
margin_right = 593.0
margin_bottom = 129.498
text = "View My Payslip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="This"]
margin_left = 195.584
margin_top = 518.595
margin_right = 393.584
margin_bottom = 587.595
text = "Logout and Quit"

[node name="Title_Event" type="Label" parent="This"]
margin_left = 4.25079
margin_top = 10.7424
margin_right = 599.251
margin_bottom = 185.742
text = "Event"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View_Pending_Report2" type="Button" parent="This/Title_Event"]
margin_left = -2.74915
margin_top = 35.5559
margin_right = 593.251
margin_bottom = 69.5559
text = "Create New Event"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View_Pending_Report" type="Button" parent="This/Title_Event"]
margin_left = -1.25085
margin_top = 115.715
margin_right = 594.749
margin_bottom = 149.715
text = "View Pending Reports"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Submit_Event_Report" type="Button" parent="This/Title_Event"]
margin_left = 2.0
margin_top = 76.0
margin_right = 592.0
margin_bottom = 110.0
text = "Submit an Event Report"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventForm" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Bank" parent="." instance=ExtResource( 3 )]
visible = false

[node name="PendingReports" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 7.0
margin_top = 211.0
margin_right = 599.0
margin_bottom = 246.0
text = "Personal Finance"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="This/Title_Financials/View_Bank" to="." method="_on_View_Bank_pressed"]
[connection signal="pressed" from="This/Title_Financials/View_Bank2" to="." method="_on_View_Bank_pressed"]
[connection signal="pressed" from="This/Title_Financials/View_Bank3" to="." method="_on_View_Bank_pressed"]
[connection signal="pressed" from="This/Quit" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="This/Title_Event/View_Pending_Report2" to="." method="_on_View_Pending_Report_pressed"]
[connection signal="pressed" from="This/Title_Event/View_Pending_Report" to="." method="_on_View_Pending_Report_pressed"]
[connection signal="pressed" from="This/Title_Event/Button_Submit_Event_Report" to="." method="_on_Button_Submit_Event_Report_pressed"]
[connection signal="return_from_eventform" from="EventForm" to="." method="_on_EventForm_return_from_eventform"]
